--- a/package.json
+++ b/package.json
@@ -5,11 +5,30 @@
   "scripts": {
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
-    "start": "wrangler dev"
+    "start": "wrangler dev",
+    "ngrok": "ngrok http 8787",
+    "init:db:local": "wrangler d1 execute comments --local --file=./schema.sql",
+    "test:db:local": "wrangler d1 execute comments --local --command=\"SELECT * FROM Comments\"",
+    "init:db:prod": "wrangler d1 execute comments --file=./schema.sql",
+    "test:db:prod": "wrangler d1 execute comments --command=\"SELECT * FROM Comments\"",
+    "test": "c8 mocha test",
+    "fix": "eslint --fix \"**/*.js\"",
+    "lint": "eslint \"**/*.js\"",
+    "publish": "wrangler deploy"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230419.0",
+    "c8": "^8.0.0",
+    "chai": "^4.3.7",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.41.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "mocha": "^10.2.0",
+    "ngrok": "^5.0.0-beta.2",
+    "prettier": "^3.0.1",
+    "sinon": "^17.0.0",
     "typescript": "^5.0.4",
-    "wrangler": "^3.0.0"
+    "wrangler": "^3.10.1"
   }
 }
