--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,11 @@ name = "website-comments-db"
 main = "src/index.ts"
 compatibility_date = "2023-10-30"
 
+[[d1_databases]]
+binding = "DB" # i.e. available in your Worker on env.DB
+database_name = "comments"
+database_id = "d1831a5e-90f4-4283-bbee-79e039fd167e"
+
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
 # Note: Use secrets to store sensitive data.
 # Docs: https://developers.cloudflare.com/workers/platform/environment-variables
